# madhouse

./: .gitignore  docker-compose.local.yml  docker-compose.prod.yml  justfile  pyproject.toml  ruff.toml
madhouse/: Dockerfile  manage.py  pyproject.toml
madhouse/madhouse/: asgi.py  celery.py  constants.py  settings.py  wsgi.py
madhouse/main/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  validations.py  views.py
madhouse/main/migrations/: 0001_initial.py  0002_certificate.py  0002_remove_maindata_quote.py  0002_remove_maindata_service_and_more.py  0003_alter_certificate_options_and_more.py
madhouse/static/: robots.txt
madhouse/static/css/: style.css
madhouse/static/js/: designesia.js
madhouse/templates/: base.html  certificate.html  certificate_page.html  example.html  example_page.html  footer.html  header.html  main.html  service.html  service_page.html
nginx/: nginx.conf
