[tool.poetry]
name = "madhouse"
version = "0.1.0"
description = ""
authors = ["Alexander <alexpunder@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.7.1"
django = "^5.1.2"
python-dotenv = "^1.0.1"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
pillow = "^11.0.0"
django-recaptcha = "^4.0.0"
gunicorn = "^23.0.0"
psycopg2-binary = "2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
